fixed bug on mobile

--- a/app/scss/gallery-tamplate.scss
+++ b/app/scss/gallery-tamplate.scss
@@ -1,6 +1,11 @@
 
 @import "./variables.scss";
 
+.main-item__gallery {
+  max-width: none;
+  max-height: none;
+}
+
 
 .gallery-container {
   width: 600px;
