--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -187,11 +187,12 @@ input, button, submit {
 
   #site-wrapper {
     width : 100%;
-    // max-width : 768px;
+    max-width : 768px;
     margin : 0 auto;
   }
   #lower-site {
     width : 100%;
+    // width : 400px;
   }
   .header-container {
     margin-bottom: 8px;
